--- a/Frontend/app/src/index.html
+++ b/Frontend/app/src/index.html
@@ -7,6 +7,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <base href="/" />
+
   <title>BETSHALOM</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,7 +17,7 @@
 <body class="mat-typography">
 
 
-<app-root></app-root>
+  <app-root></app-root>
 
 
 </body>
